Some tests changed because of losthost\DB changes (I know that it's wrong test design)

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     
     "require": {
-        "losthost/db": "dev-main",
+        "losthost/db": "^1.6.2",
         "losthost/passg": "^v1.1.0"
     },
     "require-dev": {
